# projet_tns

./: .dockerignore  .gitignore  Cahier de charge.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  validate.py
core/: database.py  models.py
endpoints/: __init__.py  routes.py
instance/: tns.db
scripts/: add_noise.py
static/: audio.js  audio_filtrage.js  recorder.js  segments.js  style.css  tabs.js
template/: base.html  base_new.html  base_old.html  index.html
template/components/: alert.html  button.html  card.html
template/components/onglets/: nav.html  onglet1.html  onglet2.html
template/pages/: filtrage.html  numerisation.html
